<resources>

    <!-- App, Activityes, Fragments and Dialogs Names -->
    <string name="app_name">WeLegends</string>
    <string name="title_activity_activity_summoner">Find Summoner</string>
    <string name="title_activity_activity_details">Champion details</string>
    <string name="title_activity_activity_about">About</string>
    <string name="title_activity_champion_stats_details">ActivityChampionStatsDetails</string>

    <!-- Sections -->
    <string name="section_ranked">RANKEDS</string>
    <string name="section_summoner">SUMMONER</string>
    <string name="section_history">HISTORY</string>
    <string name="section_champs">CHAMPION STATS</string>
    <string name="title_section_champion">Champion</string>
    <string name="title_section_victory_team">Victory Team</string>
    <string name="title_section_defeat_team">Defeat Team</string>

    <!-- SubSections -->
    <string name="region_prompt">Choose a region: </string>

    <!-- Actions -->
    <string name="go">Search</string>
    <string name="action_about">About</string>
    <string name="retry">Retry</string>

    <!-- Errors -->
    <string name="timeout">Timeout Error</string>
    <string name="error500">Internal Server Error</string>
    <string name="error404">Not Found</string>
    <string name="summonerHistoryError">ERROR: Loading summoner history</string>
    <string name="voidSummonerError">ERROR: Loading a NULL Summoner</string>
    <string name="unknowkError">Unknown Error</string>
    <string name="networkUnavailable">Network is unavailable</string>
    <string name="nothingToShow">Nothing to show</string>
    <string name="error_loading_static_data">Error loading Static Data</string>
    <string name="toast_error_loading_static_data">Error loading Static Data. Relaunch App</string>

    <!-- Messages -->
    <string name="checkingVersion">Checking server version…</string>
    <string name="working">Working…</string>
    <string name="searching_summoner">Searching summoner…</string>
    <string name="losing_connection">Weak connection. App could have malfunction.</string>
    <string name="wait_static_data_end">Wait until data load ends</string>

    <!-- Map Names -->
    <string name="rift">Summoner\'s Rift</string>
    <string name="tt">Twisted Treeline</string>
    <string name="cs">The Crystal Scar</string>
    <string name="ha">Howling Abyss</string>
    <string name="butcher">Butcher’s Bridge</string>

    <!-- Libraries Description -->
    <string name="volley">Asynchronously networking library introduced to make networking calls much easier and faster without writing tons of code.</string>
    <string name="gson">Gson is a Java library used to convert Java Objects into their JSON representation or to convert a JSON string to an equivalent Java object.</string>
    <string name="obserbabl_escroll_view">Library to interact with Android Toolbar and helpful to implement look and feel of Material Design apps.</string>
    <string name="recyclerview_animators">Library to easily create RecyclerView with animations.</string>
    <string name="smart_tab_layout">A custom ViewPager title strip which gives you an easy way to customize the look.</string>

    <!-- Other Shit -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_summoner">Summoner\'s name</string>
    <string name="earnedGold">Gold per minute:</string>
    <string name="farmedCs">Creeps per minute:</string>
    <string name="killingSprees">Largest killing spree:</string>
    <string name="healDone">Total heal done:</string>
    <string name="magicDamageDealt">Magic damage dealt:</string>
    <string name="physicalDamageDealt">Physical damage dealt:</string>
    <string name="totalDamageDealt">Total damage dealt:</string>
    <string name="totalDamageTaken">Total damage taken:</string>
    <string name="level">Level</string>
    <string name="penta">Pentakills</string>
    <string name="quadra">Quadrakills</string>
    <string name="triple">Triplekills</string>
    <string name="doble">Doublekills</string>
    <string name="single">Kills</string>
    <string name="turrets">Total turrets destroyed</string>
    <string name="average_damage_dealt">Damage dealt</string>
    <string name="average_damage_taken">Damage taken</string>
    <string name="victory_team">Victory Team</string>
    <string name="defeat_team">Defeat Team</string>

    <string-array name="region_array">
        <item>EUW</item>
        <item>KR</item>
        <item>LAN</item>
        <item>LAS</item>
        <item>OCE</item>
        <item>RU</item>
        <item>EUNE</item>
        <item>TR</item>
        <item>NA</item>
        <item>BR</item>
    </string-array>

    <!-- Stats -->
    <string name="stat_perfect">Perfect</string>
    <string name="stat_good">Good</string>
    <string name="stat_regular">Regular</string>
    <string name="stat_bad">Bad</string>
    <string name="jungle">Jungle</string>
    <string name="mid">Mid</string>
    <string name="top">Top</string>
    <string name="carry">Carry</string>
    <string name="support">Support</string>
    <string name="bot">Bot</string>
    <string name="playing_true">In Game</string>
    <string name="playing_false">Not Playing</string>

    <!-- Game Mode -->
    <string name="bot_game" translatable="false">Bot Game</string>
    <string name="ranked_solo5x5">Ranked Solo</string>
    <string name="ranked_premade">Ranked Premade</string>
    <string name="ranked_team">Ranked Team</string>
    <string name="normal_draft" translatable="false">Draft</string>
    <string name="normal_game">Normal</string>
    <string name="odin_draft" translatable="false">Draft Dominion</string>
    <string name="odin_game" translatable="false">Dominion</string>
    <string name="group_finder">Group Finder</string>
    <string name="aram_game">ARAM</string>
    <string name="bilgewater_game" translatable="false">Bilgewater</string>
    <string name="bilgewater_aram_game" translatable="false">Bilgewater ARAM</string>
    <string name="urf_game">URF</string>
    <string name="firstblood_game">FirstBlood</string>
    <string name="oneforall_mirror_game">MIRROR ONEFORALL</string>
    <string name="oneforall_game">ONEFORALL</string>
    <string name="hexakill_game" translatable="false">Hexakill</string>
    <string name="king_poro_game">King Poro</string>
    <string name="counter_pick_game" translatable="false">Counter Pick</string>
    <string name="ascension">Ascension</string>
    <string name="rift6x6">Summoner\'s Rift</string>
    <string name="custom_game">Custom</string>
    <string name="title_section_my_team">My Team</string>
    <string name="title_section_enemy_team">Enemy Team</string>
    <string name="title_activity_current_info">Current Game</string>
    <string name="loadStaticData">Loading Static Data....</string>
    <string name="allsummoners">Historic</string>
    <string name="empty">No Summoners Found. :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- NavDrawer items strings -->
    <string-array name="DrawerItems">
        <item>Profile</item>
        <item>Rankeds</item>
        <item>History</item>
        <item>Statistics</item>
    </string-array>

    <!-- Preferences strings  -->
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_title_theme">Theme</string>

    <string-array name="pref_theme_list_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Alternate</item>
    </string-array>

    <string-array name="pref_theme_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
