<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="andiag.coru.es.welegends.activities.ActivitySummoner">

    <EditText
        android:id="@+id/editTextSummoner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/hint_summoner"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="?colorAccent"
        android:textColorHint="@color/secondary_text"
        android:layout_below="@+id/textVersion"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/spinnerRegions"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSummoner"
        android:layout_alignStart="@+id/editTextSummoner"
        android:layout_below="@+id/editTextSummoner"
        android:entries="@array/region_array"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:prompt="@string/region_prompt"
        android:spinnerMode="dialog"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerRegions"
        android:layout_alignStart="@+id/spinnerRegions"
        android:layout_below="@+id/spinnerRegions"
        android:elevation="10dp"
        android:onClick="onClickFindSummoner"
        android:text="@string/go"
        android:textColor="@color/button_text" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="10dp"
        android:src="@drawable/icon3" />

    <ListView
        android:id="@+id/listViewSummHistory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonGo"
        android:layout_alignStart="@+id/buttonGo"
        android:divider="@color/transparent"
        android:dividerHeight="2dp"
        android:layout_below="@+id/buttonSummoners" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Version 6.11.1"
        android:id="@+id/textVersion"
        android:gravity="center"
        android:textColor="?colorPrimary"
        android:layout_below="@+id/progressBar"
        android:layout_alignLeft="@+id/editTextSummoner"
        android:layout_alignStart="@+id/editTextSummoner"
        android:layout_alignRight="@+id/editTextSummoner"
        android:layout_alignEnd="@+id/editTextSummoner" />

    <Button
        android:id="@+id/buttonSummoners"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/allsummoners"
        android:textColor="@color/button_text"
        android:layout_below="@+id/buttonGo"
        android:layout_alignLeft="@+id/buttonGo"
        android:layout_alignStart="@+id/buttonGo" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:progressTint="?colorPrimary"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
