<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".views.summoners.impl.FragmentFindSummoner">

    <EditText
        android:id="@+id/editTextSummoner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/hint_summoner"
        android:imeOptions="actionGo"
        android:maxLines="1"
        android:textColor="?colorAccent"
        android:textColorHint="@color/white"
        android:layout_above="@+id/spinnerRegions"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:textSize="24sp" />

    <es.coru.andiag.welegends.common.utils.FontTextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/progressBar"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="Historic"
        android:id="@+id/buttonHistoric"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_historic"
        android:layout_above="@+id/editTextSummoner"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:tint="?colorAccent" />

    <Spinner
        android:id="@+id/spinnerRegions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/region_array"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:prompt="@string/region_prompt"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:layout_above="@+id/buttonGo"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:textColor="?colorAccent"
        android:layout_marginBottom="16dp"
        android:text="@string/go"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="?colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>