<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:src="@drawable/background_default0"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextSummoner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/hint_summoner"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="?colorAccent"
            android:textColorHint="@color/white"
            android:layout_above="@+id/spinnerRegions"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:id="@+id/spinnerRegions"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:entries="@array/region_array"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:prompt="@string/region_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:layout_above="@+id/buttonGo"
            android:layout_alignLeft="@+id/editTextSummoner"
            android:layout_alignStart="@+id/editTextSummoner" />

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:onClick="onClickFindSummoner"
            android:text="@string/go"
            android:textColor="@color/button_text"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/spinnerRegions"
            android:layout_alignStart="@+id/spinnerRegions"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
        <TextView
            android:id="@+id/textVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Version 6.11.1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:progressTint="?colorPrimary"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    </RelativeLayout>
</FrameLayout>