<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="andiag.coru.es.lolinfo.activities.ActivitySummoner">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSummoner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/summoner"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/editTextSummoner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/hint_summoner"
            android:textColor="@color/primary"
            android:textColorHint="@color/secondary_text" />

        <Spinner
            android:id="@+id/spinnerRegions"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#ff7683ff"
            android:elevation="5dp"
            android:entries="@array/region_array"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:prompt="@string/region_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/button_background"
            android:elevation="10dp"
            android:onClick="onClickSummonerHistory"
            android:text="@string/go"
            android:textColor="@color/button_text" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/andiag" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="10dp"
        android:src="@drawable/icon3" />

</RelativeLayout>
